
lib_LIBRARIES = libdpx.a

libdpx_a_SOURCES = Codec.cpp \
                   DPX.cpp \
                   DPXHeader.cpp \
                   ElementReadStream.cpp \
                   InStream.cpp \
                   OutStream.cpp \
                   Reader.cpp \
                   RunLengthEncoding.cpp \
				   TestFunc.cpp \
                   Writer.cpp

noinst_HEADERS = BaseTypeConverter.h \
				 Codec.h \
				 ElementReadStream.h \
				 EndianSwap.h \
				 ReaderInternal.h \
				 RunLengthEncoding.h \
				 TestFunc.h \
				 WriterInternal.h

libdpxincludedir = $(includedir)

libdpxinclude_HEADERS = DPX.h DPXHeader.h DPXStream.h



